@@ -1,3 +1,8 @@
+2005-07-17 Adam Schreiber <sadam@clemson.edu>
+	* libseahorse/seahorse-key-store.c:
+	* libseahorse/seahorse-multi-source.c: Patch from Flavio daCosta
+	  (bug #310214)
+
 2005-07-16 Adam Schreiber <sadam@clemson.edu>
 	* libseahorse/seahorse-prefs.glade:
 	* libseahorse/seahorse-prefs-cache.c: Patch from Jim Pharis
